--- a/block-BJaake/code/style.css
+++ b/block-BJaake/code/style.css
@@ -107,6 +107,10 @@ section {
 }
 body {
   line-height: 1;
+  background-color: #f1deb8;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
 }
 ol,
 ul {
@@ -126,4 +130,58 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+header {
+  padding: 1.2rem 0;
+  background-color: black;
+}
+h1 {
+  color: white;
+  text-align: center;
+  font-size: 1.5rem;
+}
+.container {
+  width: 700px;
+  margin: 0 auto;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+img {
+  width: 300px;
+  height: 200px;
+}
+
+.options {
+  margin: 1rem 0;
+}
+select {
+  padding: 0.5rem 2rem;
+}
+li {
+  margin-top: 1.5rem;
+  text-align: left;
+  border: 1px solid black;
+}
+li div {
+  padding-left: 1rem;
+  padding-top: 1rem;
+}
+.source {
+  color: black;
+  background-color: cadetblue;
+  font-weight: 600;
+  padding: 0.2rem 0.4rem;
+  border-radius: 40px;
+}
+button:hover {
+  color: white;
+  background-color: black;
+}
+h3 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-top: 0.5rem;
 }
